Randomly rotate hero images using correct alignment

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -33,6 +33,8 @@ $medium-screen-breakpoint: 30em; // 480px
 $mobile-breakpoint: 48em; // 768px
 $large-screen-breakpoint: 64rem; // 1024px
 $xlarge-screen-breakpoint: 81em; // 1300px
+$xxlarge-screen-breakpoint: 100em; // 1600px
+$xxxlarge-screen-breakpoint: 120em; // big
 
 @import "partials/mixins";
 @import "partials/media";
